--- a/Dacon/ParkingDemand/주차수요예측_Remake.ipynb
+++ b/Dacon/ParkingDemand/주차수요예측_Remake.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 99,
    "id": "1fb9d7bd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-22T14:08:20.381635Z",
-     "start_time": "2021-07-22T14:08:20.103084Z"
+     "end_time": "2021-07-23T03:35:33.476776Z",
+     "start_time": "2021-07-23T03:35:33.468742Z"
     }
    },
    "outputs": [],
@@ -26,12 +26,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 101,
    "id": "b9fe2f84",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-22T14:08:21.300498Z",
-     "start_time": "2021-07-22T14:08:21.276467Z"
+     "end_time": "2021-07-23T03:35:35.228869Z",
+     "start_time": "2021-07-23T03:35:35.204834Z"
     }
    },
    "outputs": [],
@@ -59,12 +59,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 102,
    "id": "b7a6082e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-22T14:08:24.569711Z",
-     "start_time": "2021-07-22T14:08:24.561709Z"
+     "end_time": "2021-07-23T03:35:35.768268Z",
+     "start_time": "2021-07-23T03:35:35.760233Z"
     }
    },
    "outputs": [],
@@ -82,21 +82,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 103,
    "id": "1b039eff",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-22T14:08:25.921864Z",
-     "start_time": "2021-07-22T14:08:25.849544Z"
+     "end_time": "2021-07-23T03:35:36.467951Z",
+     "start_time": "2021-07-23T03:35:36.342187Z"
     },
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "# for문 columns 설정\n",
-    "Gwang_colName = ['부산광역시', '대전광역시', '광주광역시', '울산광역시', '대구광역시', '세종광역시', '경기도']\n",
-    "Other_colName = ['경상북도', '경상남도', '전라북도', '전라남도', '강원도', '충청남도', '충청북도']\n",
+    "Gwang_colName = ['부산광역시', '대전광역시', '광주광역시', '울산광역시', '대구광역시', '세종특별자치시', '경기도']\n",
+    "Other_colName = ['경상북도', '경상남도', '전라북도', '전라남도', '강원도', '충청남도', '충청북도', '제주특별자치도']\n",
     "\n",
+    "# Train\n",
     "# 1. 서울특별시 \n",
     "# - 전용면적 {85이하 - 75} | {85초과 - 65} 나누기\n",
     "idx = train[ (train['지역'] == '서울특별시') & (train['전용면적'] <= 85) ].index\n",
@@ -119,7 +120,24 @@
     "    idx = train[ (train['지역'] == colName) & (train['전용면적'] <= 85) ].index\n",
     "    train.loc[idx, '법정주차대수'] = train[(train['지역'] == colName) & (train['전용면적'] <= 85) ]['전용면적'] / 95\n",
     "    idx = train[(train['지역'] == colName) & (train['전용면적'] > 85) ].index\n",
-    "    train.loc[idx, '법정주차대수'] = train[(train['지역'] == colName) & (train['전용면적'] > 85) ]['전용면적'] / 75"
+    "    train.loc[idx, '법정주차대수'] = train[(train['지역'] == colName) & (train['전용면적'] > 85) ]['전용면적'] / 75\n",
+    "    \n",
+    "# Test\n",
+    "# 2. 광역시 + 경기도\n",
+    "# - 전용면적 {85이하 - 85} | {85초과 - 70} 나누기\n",
+    "for colName in Gwang_colName:\n",
+    "    idx = test[ (test['지역'] == colName) & (test['전용면적'] <= 85) ].index\n",
+    "    test.loc[idx, '법정주차대수'] = test[(test['지역'] == colName) & (test['전용면적'] <= 85) ]['전용면적'] / 85\n",
+    "    idx = test[(test['지역'] == colName) & (test['전용면적'] > 85) ].index\n",
+    "    test.loc[idx, '법정주차대수'] = test[(test['지역'] == colName) & (test['전용면적'] > 85) ]['전용면적'] / 70\n",
+    "    \n",
+    "# 강원도, 충청남도 등 (1과 2 제외한 나머지 지역 OO도)\n",
+    "# - 전용면적 {85이하 - 95} | {85초과 - 75} 나누기\n",
+    "for colName in Other_colName:\n",
+    "    idx = test[ (test['지역'] == colName) & (test['전용면적'] <= 85) ].index\n",
+    "    test.loc[idx, '법정주차대수'] = test[(test['지역'] == colName) & (test['전용면적'] <= 85) ]['전용면적'] / 95\n",
+    "    idx = test[(test['지역'] == colName) & (test['전용면적'] > 85) ].index\n",
+    "    test.loc[idx, '법정주차대수'] = test[(test['지역'] == colName) & (test['전용면적'] > 85) ]['전용면적'] / 75"
    ]
   },
   {
@@ -132,16 +150,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 104,
    "id": "25603d3e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-22T14:08:26.767365Z",
-     "start_time": "2021-07-22T14:08:26.711364Z"
+     "end_time": "2021-07-23T03:35:37.117511Z",
+     "start_time": "2021-07-23T03:35:37.053134Z"
     }
    },
    "outputs": [],
    "source": [
+    "# Train\n",
     "# 1. 서울특별시 \n",
     "# 1) 전용면적 30이하 : 0.5 고정\n",
     "idx = train[ (train['지역'] == '서울특별시') & (train['전용면적'] <= 30) ].index\n",
@@ -166,7 +185,20 @@
     "# - 필요한 조건은 앞서 한 조건(나누기 작업)만 하면 되기 때문에 소수점 올림만 작업하면 된다.\n",
     "for colName in Other_colName:\n",
     "    idx = train[ train['지역'] == colName ].index\n",
-    "    train.loc[idx, '법정주차대수'] = np.ceil(train[ train['지역'] == colName ]['법정주차대수'])"
+    "    train.loc[idx, '법정주차대수'] = np.ceil(train[ train['지역'] == colName ]['법정주차대수'])\n",
+    "    \n",
+    "# Test\n",
+    "# 2. 광역시 + 경기도\n",
+    "# - 필요한 조건은 앞서 한 조건(나누기 작업)만 하면 되기 때문에 소수점 올림만 작업하면 된다.\n",
+    "for colName in Gwang_colName:\n",
+    "    idx = test[ test['지역'] == colName ].index\n",
+    "    test.loc[idx, '법정주차대수'] = np.ceil(test[ test['지역'] == colName ]['법정주차대수'])\n",
+    "\n",
+    "# 3. 강원도, 충청남도 등 (1과 2 제외한 나머지 지역 OO도)\n",
+    "# - 필요한 조건은 앞서 한 조건(나누기 작업)만 하면 되기 때문에 소수점 올림만 작업하면 된다.\n",
+    "for colName in Other_colName:\n",
+    "    idx = test[ test['지역'] == colName ].index\n",
+    "    test.loc[idx, '법정주차대수'] = np.ceil(test[ test['지역'] == colName ]['법정주차대수'])"
    ]
   },
   {
@@ -179,12 +211,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 105,
    "id": "132a465b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-22T14:08:31.916786Z",
-     "start_time": "2021-07-22T14:08:31.908756Z"
+     "end_time": "2021-07-23T03:35:37.701226Z",
+     "start_time": "2021-07-23T03:35:37.693191Z"
     }
    },
    "outputs": [],
@@ -206,12 +238,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 106,
    "id": "d52f5329",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-22T14:08:34.654574Z",
-     "start_time": "2021-07-22T14:08:34.638541Z"
+     "end_time": "2021-07-23T03:35:38.256805Z",
+     "start_time": "2021-07-23T03:35:38.240771Z"
     }
    },
    "outputs": [
@@ -252,6 +284,7 @@
       "지하철          42\n",
       "버스            0\n",
       "단지내주차면수       0\n",
+      "법정주차대수        0\n",
       "dtype: int64\n"
      ]
     }
@@ -265,12 +298,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 107,
    "id": "fd8c741e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-22T13:34:21.823535Z",
-     "start_time": "2021-07-22T13:34:21.799501Z"
+     "end_time": "2021-07-23T03:35:38.594864Z",
+     "start_time": "2021-07-23T03:35:38.570865Z"
     }
    },
    "outputs": [],
@@ -292,12 +325,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 108,
    "id": "b9ebc47a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-22T13:34:25.909915Z",
-     "start_time": "2021-07-22T13:34:25.885915Z"
+     "end_time": "2021-07-23T03:35:38.881951Z",
+     "start_time": "2021-07-23T03:35:38.866221Z"
     }
    },
    "outputs": [
@@ -338,6 +371,7 @@
       "지하철         0\n",
       "버스          0\n",
       "단지내주차면수     0\n",
+      "법정주차대수      0\n",
       "dtype: int64\n"
      ]
     }
@@ -358,214 +392,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4218c224",
+   "metadata": {},
+   "source": [
+    "## 장기전세 임대료 데이터 처리"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 109,
    "id": "84adb92d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-22T14:08:42.955059Z",
-     "start_time": "2021-07-22T14:08:42.939060Z"
+     "end_time": "2021-07-23T03:35:40.479066Z",
+     "start_time": "2021-07-23T03:35:40.463032Z"
     }
    },
    "outputs": [],
    "source": [
-    "# 장기전세인것은 임대료 0\n",
     "idx = train[train['공급유형'] == '장기전세'].index\n",
     "train.loc[idx, '임대료'] = 0.0"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "64a5d996",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-07-22T14:08:46.480176Z",
-     "start_time": "2021-07-22T14:08:46.464176Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([24.72, 24.79, 26.83, 29.17, 29.34, 37.43, 37.7 , 46.94])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train[ (train['임대료'] == '-') & (train['자격유형'] == 'H') ]['전용면적'].sort_values(ascending=True).unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "4176fdc1",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-07-22T14:08:47.756511Z",
-     "start_time": "2021-07-22T14:08:47.732512Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([24.76, 24.77, 26.44, 26.47, 26.58, 26.73, 26.8 , 26.82, 26.83,\n",
-       "       26.85, 26.88, 26.9 , 26.91, 26.92, 26.94, 26.96, 26.97, 26.98,\n",
-       "       26.99, 27.82, 29.26, 29.92, 31.65, 33.09, 33.8 , 33.88, 33.92,\n",
-       "       33.94, 33.97, 36.4 , 36.47, 36.64, 36.65, 36.72, 36.73, 36.89,\n",
-       "       36.9 , 36.94, 36.96, 36.98, 37.01, 37.04, 37.17, 37.43, 37.59,\n",
-       "       37.6 , 37.64, 37.7 , 37.77, 37.78, 37.98, 39.62, 39.72, 45.71,\n",
-       "       46.16, 46.25, 46.27, 46.42, 46.46, 46.49, 46.51, 46.65, 46.7 ,\n",
-       "       46.74, 46.75, 46.77, 46.79, 46.81, 46.83, 46.85, 46.93, 46.94,\n",
-       "       46.95, 46.96, 46.97, 46.99, 51.5 , 51.57, 51.72, 51.81, 51.88,\n",
-       "       51.9 , 51.91, 51.92, 51.93, 51.98, 55.88, 59.4 , 59.45, 59.59,\n",
-       "       59.61, 59.87, 59.92, 59.94])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 임대료 임대보증금 '-'인 데이터\n",
-    "# 자격유형'H'에 공급유형 '국민임대' 는 전용면적으로 비교해 평균값으로 대체\n",
-    "train[ (train['공급유형'] == '국민임대') & (train['자격유형'] == 'H') & (train['임대료'] != '-') ]['전용면적'].sort_values(ascending=True).unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e26893ae",
+   "cell_type": "markdown",
+   "id": "246ccfaa",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "area_list = train[(train['임대료']=='-')&(train['자격유형']=='H')]['전용면적'].to_list()\n",
-    "# mean_value = \n",
-    "\n",
-    "idx = train[ (train['임대료'] == '-') & (train['자격유형'] == 'H') ]['전용면적'].index\n",
-    "train.loc[idx, '임대료'] = mean_value"
+    "## 자격유형 'H' & 임대료 '-' 데이터 처리"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 110,
    "id": "0139f65f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-22T14:09:00.816818Z",
-     "start_time": "2021-07-22T14:09:00.776818Z"
+     "end_time": "2021-07-23T03:35:41.528262Z",
+     "start_time": "2021-07-23T03:35:41.504240Z"
     }
    },
    "outputs": [],
    "source": [
     "rental_cost_mean = []\n",
+    "colletion_range = 0.5 # 수집할 +/- 범위\n",
+    "\n",
+    "# 자격유형 'H'이면서  임대료 '-'인 것들의 전용면적 가져오기\n",
     "area_list = train[(train['임대료']=='-')&(train['자격유형']=='H')]['전용면적'].to_list()\n",
     "\n",
+    "# 조건문\n",
+    "# 국민임대 & 'H' & '-'  & 면적-0.5 이상 & 면적+0.5 이하 \n",
     "for area in area_list:\n",
-    "    rental_cost_mean.append(train[ (train['공급유형'] == '국민임대') & (train['자격유형'] == 'H') & (train['임대료'] != '-')\n",
-    "          & (train['전용면적'] >= (area-0.5)) & (train['전용면적'] <= (area+0.5)) ]['임대료'].mean())"
+    "    rental_cost_mean.append( np.mean(train[ (train['공급유형'] == '국민임대') & (train['자격유형'] == 'H') & (train['임대료'] != '-') \n",
+    "      & (train['전용면적'] >= (area-colletion_range)) & (train['전용면적'] <= (area+colletion_range)) ]['임대료'].values.astype(float)) )\n",
+    "\n",
+    "# 데이터 입력\n",
+    "idx = train[(train['임대료']=='-')&(train['자격유형']=='H')].index\n",
+    "train.loc[idx, '임대료'] = rental_cost_mean"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "482b6665",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-07-22T14:09:02.162037Z",
-     "start_time": "2021-07-22T14:09:02.153999Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[77550077550.0,\n",
-       " 77550077550.0,\n",
-       " 5.178970696212169e+169,\n",
-       " 1.7856941413860155e+76,\n",
-       " 8.763010402010051e+177,\n",
-       " 70500070500.0,\n",
-       " 70500070500.0,\n",
-       " 1.2023510752511235e+118]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
+   "id": "f084bdb1",
+   "metadata": {},
    "source": [
-    "rental_cost_mean"
+    "## '-' 데이터 처리"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "685c1e2f",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-07-22T14:09:56.372449Z",
-     "start_time": "2021-07-22T14:09:56.348684Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.2023510752511235e+118"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.mean(train[(train['공급유형']== '국민임대') & (train['자격유형'] == 'H') & (train['임대료'] != '-') & (train['전용면적'] >= (area-0.5)) & (train['전용면적'] <= (area+0.5)) ]['임대료'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "34c9cc50",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-07-22T14:07:42.316633Z",
-     "start_time": "2021-07-22T14:07:42.300634Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(train[ (train['공급유형'] == '국민임대') & (train['자격유형'] == 'H') & (train['임대료'] != '-')\n",
-    "          & (train['전용면적'] >= (area-0.5)) & (train['전용면적'] <= (area+0.5)) ]['임대료'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 111,
    "id": "104111b0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-22T12:58:01.755481Z",
-     "start_time": "2021-07-22T12:58:01.739729Z"
+     "end_time": "2021-07-23T03:35:42.451613Z",
+     "start_time": "2021-07-23T03:35:42.427600Z"
     }
    },
    "outputs": [],
@@ -596,12 +498,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 112,
    "id": "6e507ba5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-22T12:58:01.763450Z",
-     "start_time": "2021-07-22T12:58:01.755481Z"
+     "end_time": "2021-07-23T03:35:43.217303Z",
+     "start_time": "2021-07-23T03:35:43.209300Z"
     }
    },
    "outputs": [],
@@ -620,12 +522,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 113,
    "id": "68ed4522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-22T12:58:01.779792Z",
-     "start_time": "2021-07-22T12:58:01.763450Z"
+     "end_time": "2021-07-23T03:35:45.347772Z",
+     "start_time": "2021-07-23T03:35:45.323740Z"
     }
    },
    "outputs": [],
@@ -648,12 +550,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 114,
    "id": "ae9c2154",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-22T12:58:01.795729Z",
-     "start_time": "2021-07-22T12:58:01.779792Z"
+     "end_time": "2021-07-23T03:35:46.220665Z",
+     "start_time": "2021-07-23T03:35:46.196620Z"
     }
    },
    "outputs": [],
@@ -681,12 +583,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 115,
    "id": "cd32d741",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-22T12:58:01.811670Z",
-     "start_time": "2021-07-22T12:58:01.795729Z"
+     "end_time": "2021-07-23T03:35:47.598950Z",
+     "start_time": "2021-07-23T03:35:47.574950Z"
     }
    },
    "outputs": [],
@@ -718,23 +620,26 @@
    "id": "db91203f",
    "metadata": {},
    "source": [
-    "# 법정주차수요"
+    "# 법정주차수요 만들기"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 116,
    "id": "662c1ebe",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-22T13:30:25.322381Z",
-     "start_time": "2021-07-22T13:30:25.314350Z"
+     "end_time": "2021-07-23T03:35:49.069985Z",
+     "start_time": "2021-07-23T03:35:49.061985Z"
     }
    },
    "outputs": [],
    "source": [
     "value = train['총세대수'] * train['법정주차대수']\n",
-    "train.insert(loc=15, column='법정주차수요', value=value)"
+    "train.insert(loc=15, column='법정주차수요', value=value)\n",
+    "\n",
+    "value = test['총세대수'] * test['법정주차대수']\n",
+    "test['법정주차수요'] = value"
    ]
   },
   {
