--- a/Dacon/ParkingDemand/주차수요예측_Remake.ipynb
+++ b/Dacon/ParkingDemand/주차수요예측_Remake.ipynb
@@ -1,13 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "c932155c",
+   "metadata": {},
+   "source": [
+    "# 추가사항\n",
+    "#### V3.1_주차수요예측(최종)\n",
+    "#### 자격유형 'H' & 임대료 '-' 데이터 처리 부분 | 추가 내용 : 임대보증금 '-' 데이터 처리 추가"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 2,
    "id": "1fb9d7bd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-23T03:35:33.476776Z",
-     "start_time": "2021-07-23T03:35:33.468742Z"
+     "end_time": "2021-07-23T06:16:33.877054Z",
+     "start_time": "2021-07-23T06:16:33.587603Z"
     }
    },
    "outputs": [],
@@ -26,12 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "id": "b9fe2f84",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-23T03:35:35.228869Z",
-     "start_time": "2021-07-23T03:35:35.204834Z"
+     "end_time": "2021-07-23T06:16:34.832602Z",
+     "start_time": "2021-07-23T06:16:34.800859Z"
     }
    },
    "outputs": [],
@@ -59,12 +69,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "id": "b7a6082e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-23T03:35:35.768268Z",
-     "start_time": "2021-07-23T03:35:35.760233Z"
+     "end_time": "2021-07-23T06:16:36.300264Z",
+     "start_time": "2021-07-23T06:16:36.284265Z"
     }
    },
    "outputs": [],
@@ -82,12 +92,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "id": "1b039eff",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-23T03:35:36.467951Z",
-     "start_time": "2021-07-23T03:35:36.342187Z"
+     "end_time": "2021-07-23T06:16:37.709235Z",
+     "start_time": "2021-07-23T06:16:37.575788Z"
     },
     "scrolled": true
    },
@@ -150,12 +160,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "id": "25603d3e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-23T03:35:37.117511Z",
-     "start_time": "2021-07-23T03:35:37.053134Z"
+     "end_time": "2021-07-23T06:16:39.144106Z",
+     "start_time": "2021-07-23T06:16:39.079733Z"
     }
    },
    "outputs": [],
@@ -211,12 +221,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
    "id": "132a465b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-23T03:35:37.701226Z",
-     "start_time": "2021-07-23T03:35:37.693191Z"
+     "end_time": "2021-07-23T06:16:40.816965Z",
+     "start_time": "2021-07-23T06:16:40.800936Z"
     }
    },
    "outputs": [],
@@ -238,12 +248,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 8,
    "id": "d52f5329",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-23T03:35:38.256805Z",
-     "start_time": "2021-07-23T03:35:38.240771Z"
+     "end_time": "2021-07-23T06:16:42.383570Z",
+     "start_time": "2021-07-23T06:16:42.367570Z"
     }
    },
    "outputs": [
@@ -298,12 +308,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 9,
    "id": "fd8c741e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-23T03:35:38.594864Z",
-     "start_time": "2021-07-23T03:35:38.570865Z"
+     "end_time": "2021-07-23T06:16:44.283912Z",
+     "start_time": "2021-07-23T06:16:44.267914Z"
     }
    },
    "outputs": [],
@@ -325,12 +335,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 9,
    "id": "b9ebc47a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-23T03:35:38.881951Z",
-     "start_time": "2021-07-23T03:35:38.866221Z"
+     "end_time": "2021-07-23T06:11:17.311651Z",
+     "start_time": "2021-07-23T06:11:17.295625Z"
     }
    },
    "outputs": [
@@ -393,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4218c224",
+   "id": "73f0d9dd",
    "metadata": {},
    "source": [
     "## 장기전세 임대료 데이터 처리"
@@ -401,12 +411,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 10,
    "id": "84adb92d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-23T03:35:40.479066Z",
-     "start_time": "2021-07-23T03:35:40.463032Z"
+     "end_time": "2021-07-23T06:16:47.208747Z",
+     "start_time": "2021-07-23T06:16:47.184781Z"
     }
    },
    "outputs": [],
@@ -417,28 +427,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "246ccfaa",
+   "id": "6e172e49",
    "metadata": {},
    "source": [
-    "## 자격유형 'H' & 임대료 '-' 데이터 처리"
+    "## 자격유형 'H' & 임대료/임대보증금 '-' 데이터 처리"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 11,
    "id": "0139f65f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-23T03:35:41.528262Z",
-     "start_time": "2021-07-23T03:35:41.504240Z"
+     "end_time": "2021-07-23T06:16:55.275811Z",
+     "start_time": "2021-07-23T06:16:55.227494Z"
     }
    },
    "outputs": [],
    "source": [
+    "deposit_cost_mean = []\n",
     "rental_cost_mean = []\n",
     "colletion_range = 0.5 # 수집할 +/- 범위\n",
     "\n",
-    "# 자격유형 'H'이면서  임대료 '-'인 것들의 전용면적 가져오기\n",
+    "# 자격유형 'H'이면서  임대료/임대보증금 '-'인 것들의 전용면적 가져오기\n",
     "area_list = train[(train['임대료']=='-')&(train['자격유형']=='H')]['전용면적'].to_list()\n",
     "\n",
     "# 조건문\n",
@@ -446,18 +457,259 @@
     "for area in area_list:\n",
     "    rental_cost_mean.append( np.mean(train[ (train['공급유형'] == '국민임대') & (train['자격유형'] == 'H') & (train['임대료'] != '-') \n",
     "      & (train['전용면적'] >= (area-colletion_range)) & (train['전용면적'] <= (area+colletion_range)) ]['임대료'].values.astype(float)) )\n",
+    "    deposit_cost_mean.append( np.mean(train[ (train['공급유형'] == '국민임대') & (train['자격유형'] == 'H') & (train['임대보증금'] != '-') \n",
+    "      & (train['전용면적'] >= (area-colletion_range)) & (train['전용면적'] <= (area+colletion_range)) ]['임대보증금'].values.astype(float)) )\n",
     "\n",
     "# 데이터 입력\n",
     "idx = train[(train['임대료']=='-')&(train['자격유형']=='H')].index\n",
-    "train.loc[idx, '임대료'] = rental_cost_mean"
+    "train.loc[idx, '임대료'] = rental_cost_mean\n",
+    "train.loc[idx, '임대보증금'] = deposit_cost_mean"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f084bdb1",
+   "id": "887d1b43",
    "metadata": {},
    "source": [
     "## '-' 데이터 처리"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "204a238f",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-23T06:17:22.778044Z",
+     "start_time": "2021-07-23T06:17:22.746012Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>단지코드</th>\n",
+       "      <th>총세대수</th>\n",
+       "      <th>임대건물구분</th>\n",
+       "      <th>지역</th>\n",
+       "      <th>공급유형</th>\n",
+       "      <th>전용면적</th>\n",
+       "      <th>전용면적별세대수</th>\n",
+       "      <th>공가수</th>\n",
+       "      <th>자격유형</th>\n",
+       "      <th>임대보증금</th>\n",
+       "      <th>임대료</th>\n",
+       "      <th>지하철</th>\n",
+       "      <th>버스</th>\n",
+       "      <th>단지내주차면수</th>\n",
+       "      <th>법정주차대수</th>\n",
+       "      <th>등록차량수</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2547</th>\n",
+       "      <td>C1326</td>\n",
+       "      <td>1934</td>\n",
+       "      <td>아파트</td>\n",
+       "      <td>부산광역시</td>\n",
+       "      <td>국민임대</td>\n",
+       "      <td>24.72</td>\n",
+       "      <td>472</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>H</td>\n",
+       "      <td>14813000.0</td>\n",
+       "      <td>155100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1670.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1153.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2548</th>\n",
+       "      <td>C1326</td>\n",
+       "      <td>1934</td>\n",
+       "      <td>아파트</td>\n",
+       "      <td>부산광역시</td>\n",
+       "      <td>국민임대</td>\n",
+       "      <td>24.79</td>\n",
+       "      <td>104</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>H</td>\n",
+       "      <td>14813000.0</td>\n",
+       "      <td>155100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1670.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1153.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2549</th>\n",
+       "      <td>C1326</td>\n",
+       "      <td>1934</td>\n",
+       "      <td>아파트</td>\n",
+       "      <td>부산광역시</td>\n",
+       "      <td>국민임대</td>\n",
+       "      <td>26.83</td>\n",
+       "      <td>590</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>H</td>\n",
+       "      <td>12561931.034483</td>\n",
+       "      <td>136854.137931</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1670.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1153.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2550</th>\n",
+       "      <td>C1326</td>\n",
+       "      <td>1934</td>\n",
+       "      <td>아파트</td>\n",
+       "      <td>부산광역시</td>\n",
+       "      <td>국민임대</td>\n",
+       "      <td>37.70</td>\n",
+       "      <td>464</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>H</td>\n",
+       "      <td>26317846.153846</td>\n",
+       "      <td>203335.384615</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1670.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1153.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2551</th>\n",
+       "      <td>C1326</td>\n",
+       "      <td>1934</td>\n",
+       "      <td>아파트</td>\n",
+       "      <td>부산광역시</td>\n",
+       "      <td>국민임대</td>\n",
+       "      <td>46.94</td>\n",
+       "      <td>304</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>H</td>\n",
+       "      <td>34794766.666667</td>\n",
+       "      <td>267337.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1670.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1153.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2906</th>\n",
+       "      <td>C2186</td>\n",
+       "      <td>924</td>\n",
+       "      <td>아파트</td>\n",
+       "      <td>대구광역시</td>\n",
+       "      <td>국민임대</td>\n",
+       "      <td>29.17</td>\n",
+       "      <td>238</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>H</td>\n",
+       "      <td>9171000.0</td>\n",
+       "      <td>141000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>664.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>744.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2907</th>\n",
+       "      <td>C2186</td>\n",
+       "      <td>924</td>\n",
+       "      <td>아파트</td>\n",
+       "      <td>대구광역시</td>\n",
+       "      <td>국민임대</td>\n",
+       "      <td>29.34</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>H</td>\n",
+       "      <td>9171000.0</td>\n",
+       "      <td>141000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>664.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>744.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2908</th>\n",
+       "      <td>C2186</td>\n",
+       "      <td>924</td>\n",
+       "      <td>아파트</td>\n",
+       "      <td>대구광역시</td>\n",
+       "      <td>국민임대</td>\n",
+       "      <td>37.43</td>\n",
+       "      <td>220</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>H</td>\n",
+       "      <td>23740900.0</td>\n",
+       "      <td>201684.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>664.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>744.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       단지코드  총세대수 임대건물구분     지역  공급유형   전용면적  전용면적별세대수   공가수 자격유형  \\\n",
+       "2547  C1326  1934    아파트  부산광역시  국민임대  24.72       472  43.0    H   \n",
+       "2548  C1326  1934    아파트  부산광역시  국민임대  24.79       104  43.0    H   \n",
+       "2549  C1326  1934    아파트  부산광역시  국민임대  26.83       590  43.0    H   \n",
+       "2550  C1326  1934    아파트  부산광역시  국민임대  37.70       464  43.0    H   \n",
+       "2551  C1326  1934    아파트  부산광역시  국민임대  46.94       304  43.0    H   \n",
+       "2906  C2186   924    아파트  대구광역시  국민임대  29.17       238   0.0    H   \n",
+       "2907  C2186   924    아파트  대구광역시  국민임대  29.34        38   0.0    H   \n",
+       "2908  C2186   924    아파트  대구광역시  국민임대  37.43       220   0.0    H   \n",
+       "\n",
+       "                임대보증금            임대료  지하철   버스  단지내주차면수  법정주차대수   등록차량수  \n",
+       "2547       14813000.0       155100.0  0.0  4.0   1670.0     1.0  1153.0  \n",
+       "2548       14813000.0       155100.0  0.0  4.0   1670.0     1.0  1153.0  \n",
+       "2549  12561931.034483  136854.137931  0.0  4.0   1670.0     1.0  1153.0  \n",
+       "2550  26317846.153846  203335.384615  0.0  4.0   1670.0     1.0  1153.0  \n",
+       "2551  34794766.666667       267337.0  0.0  4.0   1670.0     1.0  1153.0  \n",
+       "2906        9171000.0       141000.0  0.0  8.0    664.0     1.0   744.0  \n",
+       "2907        9171000.0       141000.0  0.0  8.0    664.0     1.0   744.0  \n",
+       "2908       23740900.0       201684.5  0.0  8.0    664.0     1.0   744.0  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.iloc[idx]"
    ]
   },
   {
@@ -686,7 +938,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(apart_train.corr()['등록차량수'].abs().sort_values(ascending=False))"
+    "pd.DataFrame(apart_train.corr()['등록차량수'].sort_values(ascending=False))"
    ]
   },
   {
