--- a/Dacon/ParkingDemand/주차수요예측_Remake.ipynb
+++ b/Dacon/ParkingDemand/주차수요예측_Remake.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "source": [
     "# 추가사항\n",
-    "#### V3.2_주차수요예측(최종)\n",
-    "#### '-' 데이터 처리를 위한 함수 추가\n",
-    "#### train/test 유형별 임대보증금/임대료 '-' 데이터 처리"
+    "#### V3.3_주차수요예측(최종)\n",
+    "#### 궁금증 추가\n",
+    "#### PlaceParkingDivision, MyCeil, HyphenDataProc 함수 추가"
    ]
   },
   {
@@ -17,8 +17,8 @@
    "id": "1fb9d7bd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-23T08:10:54.336705Z",
-     "start_time": "2021-07-23T08:10:54.054339Z"
+     "end_time": "2021-07-23T23:41:16.354916Z",
+     "start_time": "2021-07-23T23:41:15.924671Z"
     }
    },
    "outputs": [],
@@ -37,12 +37,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "id": "b9fe2f84",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-23T08:10:54.593396Z",
-     "start_time": "2021-07-23T08:10:54.561375Z"
+     "end_time": "2021-07-23T13:50:56.090152Z",
+     "start_time": "2021-07-23T13:50:56.066152Z"
     }
    },
    "outputs": [],
@@ -70,12 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "id": "b7a6082e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-23T08:10:55.058352Z",
-     "start_time": "2021-07-23T08:10:55.050354Z"
+     "end_time": "2021-07-23T09:16:36.962783Z",
+     "start_time": "2021-07-23T09:16:36.954749Z"
     }
    },
    "outputs": [],
@@ -93,62 +93,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
+   "id": "1c595fbc",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-23T09:16:37.691268Z",
+     "start_time": "2021-07-23T09:16:37.683266Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def PlaceParkingDivision(dataframe, place_colNames ,denominatorLessNum, denominatorExceedNum):\n",
+    "    df = dataframe.copy()\n",
+    "    \n",
+    "    for colName in place_colNames:\n",
+    "        idx = df[ (df['지역'] == colName) & (df['전용면적'] <= 85) ].index\n",
+    "        df.loc[idx, '법정주차대수'] = df[(df['지역'] == colName) & (df['전용면적'] <= 85) ]['전용면적'] / denominatorLessNum\n",
+    "        idx = df[(df['지역'] == colName) & (train['전용면적'] > 85) ].index\n",
+    "        df.loc[idx, '법정주차대수'] = df[(df['지역'] == colName) & (df['전용면적'] > 85) ]['전용면적'] / denominatorExceedNum\n",
+    "        \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "1b039eff",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-23T08:10:55.505090Z",
-     "start_time": "2021-07-23T08:10:55.365374Z"
+     "end_time": "2021-07-23T08:57:17.901301Z",
+     "start_time": "2021-07-23T08:57:17.769537Z"
     },
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "# for문 columns 설정\n",
-    "Gwang_colName = ['부산광역시', '대전광역시', '광주광역시', '울산광역시', '대구광역시', '세종특별자치시', '경기도']\n",
-    "Other_colName = ['경상북도', '경상남도', '전라북도', '전라남도', '강원도', '충청남도', '충청북도', '제주특별자치도']\n",
+    "Gwang_colNames = ['부산광역시', '대전광역시', '광주광역시', '울산광역시', '대구광역시', '세종특별자치시', '경기도']\n",
+    "Other_colNames = ['경상북도', '경상남도', '전라북도', '전라남도', '강원도', '충청남도', '충청북도', '제주특별자치도']\n",
     "\n",
     "# Train\n",
     "# 1. 서울특별시 \n",
     "# - 전용면적 {85이하 - 75} | {85초과 - 65} 나누기\n",
-    "idx = train[ (train['지역'] == '서울특별시') & (train['전용면적'] <= 85) ].index\n",
-    "train.loc[idx, '법정주차대수'] = train[ (train['지역'] == '서울특별시') & (train['전용면적'] <= 85) ]['전용면적'] / 75\n",
-    "\n",
-    "idx = train[ (train['지역'] == '서울특별시') & (train['전용면적'] > 85) ].index\n",
-    "train.loc[idx, '법정주차대수'] = train[ (train['지역'] == '서울특별시') & (train['전용면적'] > 85) ]['전용면적'] / 65\n",
+    "train = PlaceParkingDivision(train, ['서울특별시'], 75, 65)\n",
     "\n",
     "# 2. 광역시 + 경기도\n",
     "# - 전용면적 {85이하 - 85} | {85초과 - 70} 나누기\n",
-    "for colName in Gwang_colName:\n",
-    "    idx = train[ (train['지역'] == colName) & (train['전용면적'] <= 85) ].index\n",
-    "    train.loc[idx, '법정주차대수'] = train[(train['지역'] == colName) & (train['전용면적'] <= 85) ]['전용면적'] / 85\n",
-    "    idx = train[(train['지역'] == colName) & (train['전용면적'] > 85) ].index\n",
-    "    train.loc[idx, '법정주차대수'] = train[(train['지역'] == colName) & (train['전용면적'] > 85) ]['전용면적'] / 70\n",
+    "train = PlaceParkingDivision(train, Gwang_colNames, 85, 70)\n",
     "    \n",
     "# 강원도, 충청남도 등 (1과 2 제외한 나머지 지역 OO도)\n",
     "# - 전용면적 {85이하 - 95} | {85초과 - 75} 나누기\n",
-    "for colName in Other_colName:\n",
-    "    idx = train[ (train['지역'] == colName) & (train['전용면적'] <= 85) ].index\n",
-    "    train.loc[idx, '법정주차대수'] = train[(train['지역'] == colName) & (train['전용면적'] <= 85) ]['전용면적'] / 95\n",
-    "    idx = train[(train['지역'] == colName) & (train['전용면적'] > 85) ].index\n",
-    "    train.loc[idx, '법정주차대수'] = train[(train['지역'] == colName) & (train['전용면적'] > 85) ]['전용면적'] / 75\n",
+    "train = PlaceParkingDivision(train, Other_colNames, 95, 75)\n",
     "    \n",
     "# Test\n",
     "# 2. 광역시 + 경기도\n",
     "# - 전용면적 {85이하 - 85} | {85초과 - 70} 나누기\n",
-    "for colName in Gwang_colName:\n",
-    "    idx = test[ (test['지역'] == colName) & (test['전용면적'] <= 85) ].index\n",
-    "    test.loc[idx, '법정주차대수'] = test[(test['지역'] == colName) & (test['전용면적'] <= 85) ]['전용면적'] / 85\n",
-    "    idx = test[(test['지역'] == colName) & (test['전용면적'] > 85) ].index\n",
-    "    test.loc[idx, '법정주차대수'] = test[(test['지역'] == colName) & (test['전용면적'] > 85) ]['전용면적'] / 70\n",
+    "test = PlaceParkingDivision(test, Gwang_colNames, 85, 70)\n",
     "    \n",
     "# 강원도, 충청남도 등 (1과 2 제외한 나머지 지역 OO도)\n",
     "# - 전용면적 {85이하 - 95} | {85초과 - 75} 나누기\n",
-    "for colName in Other_colName:\n",
-    "    idx = test[ (test['지역'] == colName) & (test['전용면적'] <= 85) ].index\n",
-    "    test.loc[idx, '법정주차대수'] = test[(test['지역'] == colName) & (test['전용면적'] <= 85) ]['전용면적'] / 95\n",
-    "    idx = test[(test['지역'] == colName) & (test['전용면적'] > 85) ].index\n",
-    "    test.loc[idx, '법정주차대수'] = test[(test['지역'] == colName) & (test['전용면적'] > 85) ]['전용면적'] / 75"
+    "test = PlaceParkingDivision(test, Other_colNames, 95, 75)"
    ]
   },
   {
@@ -161,12 +165,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "df40d90e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-23T09:01:30.217148Z",
+     "start_time": "2021-07-23T09:01:30.209113Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def MyCeil(dataframe, place_colNames):\n",
+    "    df = dataframe.copy()\n",
+    "    \n",
+    "    for colName in place_colNames:\n",
+    "        idx = df[ df['지역'] == colName ].index\n",
+    "        df.loc[idx, '법정주차대수'] = np.ceil(df[ df['지역'] == colName ]['법정주차대수'])\n",
+    "        \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "25603d3e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-23T08:10:56.080567Z",
-     "start_time": "2021-07-23T08:10:56.016364Z"
+     "end_time": "2021-07-23T08:35:24.451458Z",
+     "start_time": "2021-07-23T08:35:24.377847Z"
     }
    },
    "outputs": [],
@@ -188,28 +214,20 @@
     "\n",
     "# 2. 광역시 + 경기도\n",
     "# - 필요한 조건은 앞서 한 조건(나누기 작업)만 하면 되기 때문에 소수점 올림만 작업하면 된다.\n",
-    "for colName in Gwang_colName:\n",
-    "    idx = train[ train['지역'] == colName ].index\n",
-    "    train.loc[idx, '법정주차대수'] = np.ceil(train[ train['지역'] == colName ]['법정주차대수'])\n",
+    "train = MyCeil(train, Gwang_colName)\n",
     "\n",
     "# 3. 강원도, 충청남도 등 (1과 2 제외한 나머지 지역 OO도)\n",
     "# - 필요한 조건은 앞서 한 조건(나누기 작업)만 하면 되기 때문에 소수점 올림만 작업하면 된다.\n",
-    "for colName in Other_colName:\n",
-    "    idx = train[ train['지역'] == colName ].index\n",
-    "    train.loc[idx, '법정주차대수'] = np.ceil(train[ train['지역'] == colName ]['법정주차대수'])\n",
+    "train = MyCeil(train, Other_colName)\n",
     "    \n",
     "# Test\n",
     "# 2. 광역시 + 경기도\n",
     "# - 필요한 조건은 앞서 한 조건(나누기 작업)만 하면 되기 때문에 소수점 올림만 작업하면 된다.\n",
-    "for colName in Gwang_colName:\n",
-    "    idx = test[ test['지역'] == colName ].index\n",
-    "    test.loc[idx, '법정주차대수'] = np.ceil(test[ test['지역'] == colName ]['법정주차대수'])\n",
+    "test = MyCeil(test, Gwang_colName)\n",
     "\n",
     "# 3. 강원도, 충청남도 등 (1과 2 제외한 나머지 지역 OO도)\n",
     "# - 필요한 조건은 앞서 한 조건(나누기 작업)만 하면 되기 때문에 소수점 올림만 작업하면 된다.\n",
-    "for colName in Other_colName:\n",
-    "    idx = test[ test['지역'] == colName ].index\n",
-    "    test.loc[idx, '법정주차대수'] = np.ceil(test[ test['지역'] == colName ]['법정주차대수'])"
+    "test = MyCeil(test, Other_colName)"
    ]
   },
   {
@@ -226,8 +244,8 @@
    "id": "132a465b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-23T08:10:56.883146Z",
-     "start_time": "2021-07-23T08:10:56.875113Z"
+     "end_time": "2021-07-23T08:35:24.708577Z",
+     "start_time": "2021-07-23T08:35:24.700576Z"
     }
    },
    "outputs": [],
@@ -253,8 +271,8 @@
    "id": "d52f5329",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-23T08:10:57.776460Z",
-     "start_time": "2021-07-23T08:10:57.752422Z"
+     "end_time": "2021-07-23T08:35:26.178120Z",
+     "start_time": "2021-07-23T08:35:26.162087Z"
     }
    },
    "outputs": [
@@ -313,8 +331,8 @@
    "id": "fd8c741e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-23T08:10:58.088422Z",
-     "start_time": "2021-07-23T08:10:58.072453Z"
+     "end_time": "2021-07-23T08:35:26.474616Z",
+     "start_time": "2021-07-23T08:35:26.458649Z"
     }
    },
    "outputs": [],
@@ -340,8 +358,8 @@
    "id": "b9ebc47a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-23T08:10:58.456455Z",
-     "start_time": "2021-07-23T08:10:58.432749Z"
+     "end_time": "2021-07-23T08:35:26.879242Z",
+     "start_time": "2021-07-23T08:35:26.855236Z"
     }
    },
    "outputs": [
@@ -408,8 +426,8 @@
    "id": "5bfab98c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-23T08:11:00.235244Z",
-     "start_time": "2021-07-23T08:11:00.227196Z"
+     "end_time": "2021-07-23T08:35:28.178058Z",
+     "start_time": "2021-07-23T08:35:28.170025Z"
     }
    },
    "outputs": [],
@@ -447,12 +465,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "84adb92d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-23T08:11:11.458661Z",
-     "start_time": "2021-07-23T08:11:11.450660Z"
+     "end_time": "2021-07-23T08:35:28.919242Z",
+     "start_time": "2021-07-23T08:35:28.911211Z"
     }
    },
    "outputs": [],
@@ -471,12 +489,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "0139f65f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-23T08:11:11.971278Z",
-     "start_time": "2021-07-23T08:11:11.882942Z"
+     "end_time": "2021-07-23T08:35:30.354588Z",
+     "start_time": "2021-07-23T08:35:30.266379Z"
     }
    },
    "outputs": [],
@@ -500,38 +518,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0eedd983",
+   "id": "1f6f42ab",
    "metadata": {},
    "source": [
-    "## Test 공급유형 '영구임대' & 임대료/임대보증금 '-' 데이터 처리"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "id": "104111b0",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-07-23T03:35:42.451613Z",
-     "start_time": "2021-07-23T03:35:42.427600Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# 임대료, 임대보증금 데이터에 - 값이 있어서 이를 0으로 변환\n",
-    "train.loc[train.임대보증금=='-', '임대보증금'] = np.nan\n",
-    "train.loc[train.임대료=='-', '임대료'] = np.nan\n",
-    "train['임대보증금'] = train['임대보증금'].astype(float)\n",
-    "train['임대료'] = train['임대료'].astype(float)\n",
-    "train['임대보증금'] = train['임대보증금'].fillna(0)\n",
-    "train['임대료'] = train['임대료'].fillna(0)\n",
-    "\n",
-    "test.loc[test.임대보증금=='-', '임대보증금'] = np.nan\n",
-    "test.loc[test.임대료=='-', '임대료'] = np.nan\n",
-    "test['임대보증금'] = test['임대보증금'].fillna(0)\n",
-    "test['임대료'] = test['임대료'].fillna(0)\n",
-    "test['임대보증금'] = test['임대보증금'].astype(float)\n",
-    "test['임대료'] = test['임대료'].astype(float)"
+    "# 영구임대 임대보증금/임대료 결측치에 대하여"
    ]
   },
   {
@@ -1732,9 +1722,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "test",
    "language": "python",
-   "name": "python3"
+   "name": "test"
   },
   "language_info": {
    "codemirror_mode": {
